--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.3",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
-    "pg": "^8.10.0"
+    "pg": "^8.10.0",
+    "xss": "^1.0.14"
   }
 }
